# statscoupons

./: .gitignore  README.md  data_loader.py  grid_search.py  grid_search_expanded.py  grid_search_quick.py  grid_search_svm.py  neural_network.py  pyproject.toml  run_workflow.py  subset_selection.py  test_nn.py  test_station_features.py  train_model.py  train_nn.py  tune_model.py  visualize.py  visualize_confusion_matrices.py  visualize_pca.py
images/: pandas_processed_head.txt  pandas_raw_head.txt  sample_data_engineered.html  sample_data_processed.html  sample_data_raw.html  sample_data_raw_full.html
presentation/: presentation.dvi  presentation.tex
