[project]
name = "coupons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tensorflow[and-cuda]>=2.16.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pandas-stubs>=3.0.0.260204",
    "scikit-learn-stubs>=0.0.3",
]
